Stop the game when square reaches right border.

--- a/simple canvas/index.html
+++ b/simple canvas/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-
+<button id="start">start</button>
+<button id="stop">stop</button>
+<div id="time"></div>
 
 <canvas></canvas>
 
