--- a/simple canvas/index.html
+++ b/simple canvas/index.html
@@ -10,11 +10,14 @@
 </head>
 
 <body>
+
 <button id="start">start</button>
 <button id="stop">stop</button>
 <div id="time"></div>
 
-<canvas></canvas>
+<canvas style="border: 1px solid black;">
+
+</canvas>
 
 
 <script src="control.js" type="text/javascript"></script>
