Added a second platform with restrictions

--- a/simple canvas/index.html
+++ b/simple canvas/index.html
@@ -5,18 +5,13 @@
 <head>
 
     <meta name="viewport" content="width=device-width">
-    <title>Simple canvas</title>
+    <title>OnOff Game</title>
     <link href="control.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<button id="start">start</button>
-<button id="stop">stop</button>
-<div id="time"></div>
-
-<canvas style="border: 1px solid black;">
-
+<canvas id="game" style="border: 1px solid black;">
 </canvas>
 
 
