now able to draw plateforme and star from the json file!

--- a/simple canvas/index.html
+++ b/simple canvas/index.html
@@ -7,9 +7,11 @@
 </head>
 
 <body>
+
 <audio id="sound">
-    <source src="sound/backgroundMusic.mp3" type="audio/mpeg">
+   <!-- <source src="sound/backgroundMusic.mp3" type="audio/mpeg"> -->
 </audio>
+
 <div id="theHead">Welcome to OnOff bro</div>
 <div id="newGame" onclick="runGame()"
      onmouseover="this.style.color = '#202830'"
