End game correctly with appropriate message.

--- a/simple canvas/index.html
+++ b/simple canvas/index.html
@@ -12,6 +12,19 @@
    <!-- <source src="sound/backgroundMusic.mp3" type="audio/mpeg"> -->
 </audio>
 
+<audio id="jumpsound">
+    <source src="sound/jump.wav" type="audio/wav">
+</audio>
+<audio id="gameoversound">
+    <source src="sound/gameover.mp3" type="audio/mpeg">
+</audio>
+<audio id="mainstarsound">
+    <source src="sound/levelPassed.wav" type="audio/wav">
+</audio>
+<audio id="starsound">
+    <source src="sound/star.mp3" type="audio/mpeg">
+</audio>
+
 <div id="theHead">Welcome to OnOff bro</div>
 <div id="newGame" onclick="runGame()"
      onmouseover="this.style.color = '#202830'"
