--- a/simple canvas/gameover.html
+++ b/simple canvas/gameover.html
@@ -8,12 +8,17 @@
     <link href="control.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+<audio id="gameoversound">
+    <source src="sound/gameover.mp3" type="audio/mpeg">
+</audio>
+<audio id="winsound">
+    <source src="sound/win.wav" type="audio/wav">
+</audio>
 <div id="theHead">Game Over bro</div>
+<div id="congrats">Congrats bro</div>
 <button id="backMenu" onclick="backMenu()" type="button" class="btn btn-dark">Back to Main Menu</button>
 <div class="popup button--teal button--scores">
     <ol id="scoresList"></ol>
-    <p style="color:black" >Look at you bitch, cant u do more?</p>
 </div>
 <script>
 
@@ -22,7 +27,9 @@
     }
 
 </script>
+<script>
 
+</script>
 <script src="gameover.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
