Sort table at the end to display highest scores first. Fix starSound not working when we pick up two stars at the same time.

--- a/simple canvas/gameover.html
+++ b/simple canvas/gameover.html
@@ -17,19 +17,23 @@
 <div id="theHead">Game Over bro</div>
 <div id="congrats">Congrats bro</div>
 <button id="backMenu" onclick="backMenu()" type="button" class="btn btn-dark">Back to Main Menu</button>
-<div class="popup button--teal button--scores">
-    <ol id="scoresList"></ol>
-</div>
-<script>
+<!--<div class="popup button--teal button--scores"> -->
 
-    var backMenu = function () {
-        window.location.replace("index.html");
-    }
+<table  id="orderedScores" class="table">
+        <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Score</th>
+            <th scope="col"></th>
+        </tr>
+        </thead>
+        <tbody id="scoresList">
 
-</script>
-<script>
+        </tbody>
+    </table>
 
-</script>
+<!--</div>-->
+
 <script src="gameover.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
