new flags with 2 colors and starting tutorial

--- a/simple canvas/index.html
+++ b/simple canvas/index.html
@@ -29,8 +29,15 @@
      onmouseover="this.style.color = '#202830'"
      onmouseout="this.style.color = '#A9A9A9'">Play
 </div>
+<div id="tuto" onclick="runTuto()"
+     onmouseover="this.style.color = '#202830'"
+     onmouseout="this.style.color = '#A9A9A9'">How to play ?
+</div>
 <div id="main">
     <canvas id="game" style="border: 1px solid black;"></canvas>
+</div>
+<div id="tutorial">
+    <canvas id="tutorialCanevas" style="border: 1px solid black;"></canvas>
 </div>
 
 <script src="control.js" type="text/javascript"></script>
