--- a/simple canvas/index.html
+++ b/simple canvas/index.html
@@ -29,15 +29,13 @@
      onmouseover="this.style.color = '#202830'"
      onmouseout="this.style.color = '#A9A9A9'">Play
 </div>
-<div id="tuto" onclick="runTuto()"
+<div id="tuto" onclick="tuto()"
      onmouseover="this.style.color = '#202830'"
-     onmouseout="this.style.color = '#A9A9A9'">How to play ?
+     onmouseout="this.style.color = '#A9A9A9'">Tutorial
 </div>
+
 <div id="main">
     <canvas id="game" style="border: 1px solid black;"></canvas>
-</div>
-<div id="tutorial">
-    <canvas id="tutorialCanevas" style="border: 1px solid black;"></canvas>
 </div>
 
 <script src="control.js" type="text/javascript"></script>
