Comments and little clean up

--- a/simple canvas/gameover.html
+++ b/simple canvas/gameover.html
@@ -14,10 +14,9 @@
 <audio id="winsound">
     <source src="sound/win.wav" type="audio/wav">
 </audio>
-<div id="theHead">Game Over bro</div>
-<div id="congrats">Congrats bro</div>
+<div id="theHead">Game Over</div>
+<div id="congrats">Congrats you did it !</div>
 <button id="backMenu" onclick="backMenu()" type="button" class="btn btn-dark">Back to Main Menu</button>
-<!--<div class="popup button--teal button--scores"> -->
 
 <table  id="orderedScores" class="table">
         <thead>
