--- a/simple canvas/index.html
+++ b/simple canvas/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <audio id="sound">
-   <!-- <source src="sound/backgroundMusic.mp3" type="audio/mpeg"> -->
+    <source src="sound/backgroundMusic.mp3" type="audio/mpeg">
 </audio>
 <audio id="jumpsound">
     <source src="sound/jump.wav" type="audio/wav">
@@ -24,7 +24,7 @@
     <source src="sound/star.mp3" type="audio/mpeg">
 </audio>
 
-<div id="theHead">Welcome to OnOff bro</div>
+<div id="theHead">Welcome to OnOff</div>
 <div id="newGame" onclick="runGame()"
      onmouseover="this.style.color = '#202830'"
      onmouseout="this.style.color = '#A9A9A9'">Play
